--- a/css/bootstrap/bootstrap-reboot.css
+++ b/css/bootstrap/bootstrap-reboot.css
@@ -104,7 +104,7 @@ sup {
   top: -.5em; }
 
 a {
-  color: #71bc42;
+  color: #005a9f;
   text-decoration: none;
   background-color: transparent; }
   a:hover {
