--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ a {
 .btn {
   border-radius: 0px; }
   .btn.btn-primary:hover {
-    border-color: #71bc42; }
+    border-color: #005a9f; }
 
 .site-wrap {
   max-width: 1200px;
@@ -92,13 +92,13 @@ a {
 .form-control {
   height: 47px; }
   .form-control:active, .form-control:focus {
-    border-color: #71bc42; }
+    border-color: #005a9f; }
   .form-control:hover, .form-control:active, .form-control:focus {
     -webkit-box-shadow: none !important;
     box-shadow: none !important; }
 
 .site-section {
-  padding: 3em 0; }
+  padding: 3em 0;}
   @media (min-width: 768px) {
     .site-section {
       padding: 7em 0; } }
@@ -116,7 +116,7 @@ a {
     position: absolute;
     width: 40px;
     height: 2px;
-    background: #71bc42; }
+    background: #005a9f; }
   .site-section-heading.text-center:before {
     content: "";
     left: 50%;
@@ -127,7 +127,7 @@ a {
     position: absolute;
     width: 40px;
     height: 2px;
-    background: #71bc42; }
+    background: #005a9f; }
 
 .site-footer {
   padding: 4em 0;
@@ -230,7 +230,7 @@ a {
   .site-navbar .site-navigation .site-menu {
     margin-bottom: 0; }
     .site-navbar .site-navigation .site-menu .active > a {
-      color: #71bc42 !important; }
+      color: #005a9f !important; }
     .site-navbar .site-navigation .site-menu a {
       text-decoration: none !important;
       font-size: 15px;
@@ -307,7 +307,7 @@ a {
           color: #343a40;
           color: #fff; }
         .site-navbar .site-navigation .site-menu .has-children .dropdown .active > a {
-          color: #71bc42 !important; }
+          color: #005a9f !important; }
         .site-navbar .site-navigation .site-menu .has-children .dropdown > li {
           list-style: none;
           padding: 0;
@@ -317,7 +317,7 @@ a {
             padding: 5px 20px;
             display: block; }
             .site-navbar .site-navigation .site-menu .has-children .dropdown > li > a:hover {
-              color: #71bc42; }
+              color: #005a9f; }
           .site-navbar .site-navigation .site-menu .has-children .dropdown > li.has-children > a:before {
             content: "\e315";
             right: 20px; }
@@ -325,7 +325,7 @@ a {
             left: 100%;
             top: 0; }
           .site-navbar .site-navigation .site-menu .has-children .dropdown > li.has-children:hover > a, .site-navbar .site-navigation .site-menu .has-children .dropdown > li.has-children:active > a, .site-navbar .site-navigation .site-menu .has-children .dropdown > li.has-children:focus > a {
-            color: #71bc42; }
+            color: #005a9f; }
       .site-navbar .site-navigation .site-menu .has-children a {
         text-transform: uppercase; }
       .site-navbar .site-navigation .site-menu .has-children:hover > a, .site-navbar .site-navigation .site-menu .has-children:focus > a, .site-navbar .site-navigation .site-menu .has-children:active > a {
@@ -407,12 +407,12 @@ a {
       position: relative;
       color: #212529; }
       .site-mobile-menu .site-nav-wrap a:hover {
-        color: #71bc42; }
+        color: #005a9f; }
     .site-mobile-menu .site-nav-wrap li {
       position: relative;
       display: block; }
       .site-mobile-menu .site-nav-wrap li.active > a {
-        color: #71bc42; }
+        color: #005a9f; }
     .site-mobile-menu .site-nav-wrap .arrow-collapse {
       position: absolute;
       right: 0px;
@@ -634,7 +634,7 @@ a {
     display: block;
     border-radius: 50%;
     opacity: 1;
-    color: #71bc42 !important; }
+    color: #005a9f !important; }
     .site-block-half.site-block-video .image .play-button:hover {
       opacity: 1; }
     .site-block-half.site-block-video .image .play-button > span {
@@ -723,7 +723,7 @@ a {
     .block-13 .owl-nav .owl-prev:hover, .block-13 .owl-nav .owl-next:hover, .block-14 .owl-nav .owl-prev:hover, .block-14 .owl-nav .owl-next:hover, .block-15 .owl-nav .owl-prev:hover, .block-15 .owl-nav .owl-next:hover {
       -webkit-box-shadow: none !important;
       box-shadow: none !important;
-      background: #71bc42;
+      background: #005a9f;
       color: #fff; }
   .block-13 .owl-nav .owl-prev, .block-14 .owl-nav .owl-prev, .block-15 .owl-nav .owl-prev {
     left: -20px; }
@@ -748,7 +748,7 @@ a {
       -o-transition: .3s all ease;
       transition: .3s all ease; }
     .block-13 .owl-dots .owl-dot.active > span, .block-14 .owl-dots .owl-dot.active > span, .block-15 .owl-dots .owl-dot.active > span {
-      background: #71bc42; }
+      background: #005a9f; }
 
 .play-button {
   position: relative; }
@@ -875,7 +875,7 @@ a {
         width: 80px;
         height: 4px;
         margin-top: -4px;
-        background: #71bc42;
+        background: #005a9f;
         top: 0; }
       .block-12 .text .text-inner .heading {
         font-size: 20px;
@@ -898,7 +898,7 @@ a {
     display: block;
     border-radius: 50%;
     opacity: 1;
-    color: #71bc42 !important; }
+    color: #005a9f !important; }
     .block-16 figure .play-button:hover {
       opacity: 1; }
     .block-16 figure .play-button > span {
@@ -941,7 +941,7 @@ a {
   color: #999999; }
 
 .block-25 ul li a .meta {
-  color: #71bc42; }
+  color: #005a9f; }
 
 .block-25 ul li a:hover img {
   opacity: .5; }
@@ -970,7 +970,7 @@ a {
     position: absolute;
     width: 30px;
     height: 30px;
-    background: #71bc42;
+    background: #005a9f;
     border-radius: 50%;
     color: #fff; }
     .player .team-number > span {
@@ -1005,7 +1005,7 @@ a {
     border-radius: 50%;
     border: 1px solid #ccc; }
   .site-block-27 ul li.active a, .site-block-27 ul li.active span {
-    background: #71bc42;
+    background: #005a9f;
     color: #fff;
     border: 1px solid transparent; }
 
@@ -1058,7 +1058,7 @@ a {
     margin-bottom: 10px; }
     .site-block-check li:before {
       position: absolute;
-      color: #71bc42;
+      color: #005a9f;
       left: 0;
       top: -.3rem;
       font-family: 'icomoon';
@@ -1074,7 +1074,7 @@ a {
   border-bottom: 2px solid transparent; }
 
 .half-sm:hover .text, .half-sm:focus .text {
-  background: #71bc42 !important;
+  background: #005a9f !important;
   color: #fff; }
   .half-sm:hover .text h2, .half-sm:focus .text h2 {
     color: #fff !important; }
@@ -1110,7 +1110,7 @@ a {
       transition: .3s all ease;
       top: 0;
       left: 0;
-      background-color: #71bc42; }
+      background-color: #005a9f; }
     .block-37 .image .block-37-overlay {
       z-index: 3;
       position: absolute;
@@ -1152,7 +1152,7 @@ a {
     width: 50px;
     height: 2px;
     bottom: 0;
-    background: #71bc42;
+    background: #005a9f;
     left: 0; }
 
 .block-feature.text-center h2:after, .block-feature.text-center .heading:after, .heading-with-border.text-center h2:after, .heading-with-border.text-center .heading:after {
@@ -1319,9 +1319,9 @@ a {
       -webkit-transition: .3s all ease;
       -o-transition: .3s all ease;
       transition: .3s all ease;
-      background: #71bc42;
+      background: #005a9f;
       color: #fff;
-      border: 1px solid #71bc42; }
+      border: 1px solid #005a9f; }
     .unit-8 .accordion-item .heading > a[aria-expanded="false"]:before {
       content: "\e313";
       color: #ccc;
@@ -1377,6 +1377,7 @@ a {
       transform: scale(1.1); }
 
 .site-half {
+  /*margin-top: 10px;*/
   position: relative; }
   .site-half .img-bg-1 {
     background-size: cover;
@@ -1400,7 +1401,7 @@ a {
   border-radius: 0;
   border-width: 2px; }
   .btn-bg-primary:hover {
-    color: #71bc42;
+    color: #005a9f;
     background: #fff !important; }
 
 .custom-pagination span, .custom-pagination a {
@@ -1419,7 +1420,7 @@ a {
   border-radius: 50%;
   background-color: transparent; }
   .custom-pagination a:hover {
-    background: #71bc42;
+    background: #005a9f;
     color: #fff; }
 
 .slant-1 {
@@ -1443,7 +1444,8 @@ a {
 .first-section {
   position: relative;
   z-index: 5;
-  margin-top: -150px; }
+  margin-top: 100px;
+}
   @media (max-width: 991.98px) {
     .first-section {
       margin-top: -50px; } }
@@ -1454,7 +1456,7 @@ a {
 .counter .number {
   font-family: "Oswald", arial, sans-serif;
   font-size: 4rem;
-  color: #71bc42; }
+  color: #005a9f; }
 
 .footer-subscribe .form-control {
   background: transparent;
@@ -1477,7 +1479,7 @@ a {
     color: rgba(255, 255, 255, 0.4);
     font-style: italic; }
   .footer-subscribe .form-control:focus {
-    border-color: #71bc42; }
+    border-color: #005a9f; }
 
 .footer-subscribe .btn {
   position: relative;
@@ -1590,7 +1592,7 @@ a {
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background: #71bc42;
+  background: #005a9f;
   display: inline-block;
   position: relative; }
   .circle-icon-wrap > span {
@@ -1623,3 +1625,145 @@ a {
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%); }
+
+.context-dark, .bg-gray-dark, .bg-primary {
+  color: rgba(255, 255, 255, 0.8);
+}
+
+.footer-classic a, .footer-classic a:focus, .footer-classic a:active {
+  color: #ffffff;
+}
+.nav-list li {
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.nav-list li a:hover:before {
+  margin-left: 0;
+  opacity: 1;
+  visibility: visible;
+}
+
+ul, ol {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.social-inner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  padding: 23px;
+  font: 900 13px/1 "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  text-transform: uppercase;
+  color: rgba(255, 255, 255, 0.5);
+}
+.social-container .col {
+  border: 1px solid rgba(255, 255, 255, 0.1);
+}
+.nav-list li a:before {
+  content: "\f14f";
+  font: 400 21px/1 "Material Design Icons";
+  color: #4d6de6;
+  display: inline-block;
+  vertical-align: baseline;
+  margin-left: -28px;
+  margin-right: 7px;
+  opacity: 0;
+  visibility: hidden;
+  transition: .22s ease;
+}
+
+
+.bg-grey {
+  background: #292929;
+}
+.logo-footer {
+  margin-bottom: 40px;
+}
+footer {
+  color: grey;
+}
+footer p, a {
+  font-size: 12px;
+  font-family: 'Roboto', sans-serif;
+}
+footer h6 {
+  font-family: 'Playfair Display', serif;
+  margin-bottom: 40px;
+  position: relative;
+}
+footer h6:after {
+  position: absolute;
+  content: "";
+  background: grey;
+  width: 12%;
+  height: 1px;
+  left: 0;
+  bottom: -20px;
+}
+.btn-footer {
+  color: grey;
+
+  text-decoration: none;
+  border: 1px solid;
+  border-radius: 43px;
+  font-size: 13px;
+  padding: 7px 30px;
+  line-height: 47px;
+}
+.btn-footer:hover {
+
+  text-decoration: none;
+
+}
+.form-footer input[type="text"] {
+  border: none;
+  border-radius: 16px 0 0 16px;
+  outline: none;
+  padding-left: 10px;
+
+}
+::placeholder {
+  font-size: 10px;
+  padding-left: 10px;
+  font-style: italic;
+}
+.form-footer input[type="button"] {
+  border: none;
+  background:#232323;
+  margin-left: -5px;
+  color: #fff;
+  outline: none;
+  border-radius: 0 16px 16px 0;
+  padding: 2px 12px;
+}
+.social .fa {
+  color: grey;
+  font-size: 22px;
+  padding: 10px 15px;
+  background: #3c3c3c;
+}
+footer ul li {
+  list-style: none;
+  display: block;
+}
+footer ul  {
+  padding-left: 0;
+}
+footer ul  li a{
+  text-decoration: none;
+  color: grey;
+  text-decoration:none;
+}
+a:hover {
+  text-decoration: none;
+  color: #f5f5f5 !important;
+
+}
+.logo-part {
+  border-right: 1px solid grey;
+  height: 100%;
+}
