finish the requirements for clients

--- a/fonts/flaticon/font/_flaticon.scss
+++ b/fonts/flaticon/font/_flaticon.scss
@@ -1,6 +1,6 @@
     /*
     Flaticon icon font: Flaticon
-    Creation date: 31/03/2019 22:35
+    Creation date: 28/04/2020 19:36
     */
 
     @font-face {
@@ -37,20 +37,12 @@
   font-smoothing: antialiased;
     }
 
-    .flaticon-money-bag-with-dollar-symbol:before { content: "\f100"; }
-.flaticon-bar-chart:before { content: "\f101"; }
-.flaticon-line-chart:before { content: "\f102"; }
-.flaticon-box:before { content: "\f103"; }
-.flaticon-open:before { content: "\f104"; }
-.flaticon-settings:before { content: "\f105"; }
-.flaticon-target:before { content: "\f106"; }
-.flaticon-medal:before { content: "\f107"; }
+    .flaticon-money-bag:before { content: "\f100"; }
+.flaticon-box:before { content: "\f101"; }
+.flaticon-medal:before { content: "\f102"; }
+.flaticon-lab:before { content: "\f103"; }
     
-    $font-Flaticon-money-bag-with-dollar-symbol: "\f100";
-    $font-Flaticon-bar-chart: "\f101";
-    $font-Flaticon-line-chart: "\f102";
-    $font-Flaticon-box: "\f103";
-    $font-Flaticon-open: "\f104";
-    $font-Flaticon-settings: "\f105";
-    $font-Flaticon-target: "\f106";
-    $font-Flaticon-medal: "\f107";
+    $font-Flaticon-money-bag: "\f100";
+    $font-Flaticon-box: "\f101";
+    $font-Flaticon-medal: "\f102";
+    $font-Flaticon-lab: "\f103";
