--- a/scss/_site-base.scss
+++ b/scss/_site-base.scss
@@ -13,11 +13,11 @@ body {
 	background-attachment: fixed;
 	background-repeat: no-repeat;
 }
-::-moz-selection { 
+::-moz-selection {
 	background: $black;
 	color: $white;
 }
-::selection { 
+::selection {
 	background: $black;
 	color: $white;
 }
@@ -85,7 +85,7 @@ a {
 		width: 100%;
 		z-index: 2;
 		overflow: hidden;
-		
+
 		&:before {
 			opacity: 1;
 			visibility: visible;
@@ -141,20 +141,21 @@ a {
 			width: 40px;
 			height: 2px;
 			background: $primary;
-		}	
+		}
 	}
-	
+
 }
 .site-footer {
 	padding: 4em 0;
 
 	background: darken(#2b2b28, 5%);
 	color: rgba($white, .5);
-	
+
 	.footer-heading {
 		font-size: 1rem;
 		text-transform: uppercase;
 		letter-spacing: .1em;
+		text-align: right;
 
 	}
 	a {
