--- a/css/style.css
+++ b/css/style.css
@@ -245,100 +245,100 @@ a {
         color: rgba(0, 0, 0, 0.6);
         font-size: 15px;
         text-decoration: none !important; }
-        .site-navbar .site-navigation .site-menu > li > a:hover {
-          color: #000; }
-      .site-navbar .site-navigation .site-menu > li:last-child {
-        padding-right: 0; }
-        .site-navbar .site-navigation .site-menu > li:last-child > a {
-          padding-right: 0; }
-    .site-navbar .site-navigation .site-menu .has-children {
-      position: relative; }
-      .site-navbar .site-navigation .site-menu .has-children > a {
-        position: relative;
-        padding-right: 20px; }
-        .site-navbar .site-navigation .site-menu .has-children > a:before {
-          position: absolute;
-          content: "\e313";
-          font-size: 16px;
-          top: 50%;
-          right: 0;
-          -webkit-transform: translateY(-50%);
-          -ms-transform: translateY(-50%);
-          transform: translateY(-50%);
-          font-family: 'icomoon'; }
-      .site-navbar .site-navigation .site-menu .has-children .dropdown {
-        visibility: hidden;
-        opacity: 0;
-        top: 100%;
-        border-radius: 7px;
-        position: absolute;
-        text-align: left;
-        -webkit-box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.25);
-        box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.25);
-        padding: 10px 0;
-        margin-top: 20px;
-        margin-left: 0px;
-        background: #000;
-        -webkit-transition: 0.2s 0s;
-        -o-transition: 0.2s 0s;
-        transition: 0.2s 0s; }
-        .site-navbar .site-navigation .site-menu .has-children .dropdown.arrow-top {
-          position: absolute; }
-          .site-navbar .site-navigation .site-menu .has-children .dropdown.arrow-top:before {
-            bottom: 100%;
-            left: 15%;
-            border: solid transparent;
-            content: " ";
-            height: 0;
-            width: 0;
-            position: absolute;
-            pointer-events: none; }
-          .site-navbar .site-navigation .site-menu .has-children .dropdown.arrow-top:before {
-            border-color: rgba(136, 183, 213, 0);
-            border-bottom-color: #000;
-            border-width: 7px;
-            margin-left: -7px; }
-        .site-navbar .site-navigation .site-menu .has-children .dropdown a {
-          text-transform: none;
-          letter-spacing: normal;
-          -webkit-transition: 0s all;
-          -o-transition: 0s all;
-          transition: 0s all;
-          color: #343a40;
-          color: #fff; }
-        .site-navbar .site-navigation .site-menu .has-children .dropdown .active > a {
-          color: #005a9f !important; }
-        .site-navbar .site-navigation .site-menu .has-children .dropdown > li {
-          list-style: none;
-          padding: 0;
-          margin: 0;
-          min-width: 200px; }
-          .site-navbar .site-navigation .site-menu .has-children .dropdown > li > a {
-            padding: 5px 20px;
-            display: block; }
-            .site-navbar .site-navigation .site-menu .has-children .dropdown > li > a:hover {
-              color: #005a9f; }
-          .site-navbar .site-navigation .site-menu .has-children .dropdown > li.has-children > a:before {
-            content: "\e315";
-            right: 20px; }
-          .site-navbar .site-navigation .site-menu .has-children .dropdown > li.has-children > .dropdown, .site-navbar .site-navigation .site-menu .has-children .dropdown > li.has-children > ul {
-            left: 100%;
-            top: 0; }
-          .site-navbar .site-navigation .site-menu .has-children .dropdown > li.has-children:hover > a, .site-navbar .site-navigation .site-menu .has-children .dropdown > li.has-children:active > a, .site-navbar .site-navigation .site-menu .has-children .dropdown > li.has-children:focus > a {
-            color: #005a9f; }
-      .site-navbar .site-navigation .site-menu .has-children a {
-        text-transform: uppercase; }
-      .site-navbar .site-navigation .site-menu .has-children:hover > a, .site-navbar .site-navigation .site-menu .has-children:focus > a, .site-navbar .site-navigation .site-menu .has-children:active > a {
-        color: #000; }
-      .site-navbar .site-navigation .site-menu .has-children:hover, .site-navbar .site-navigation .site-menu .has-children:focus, .site-navbar .site-navigation .site-menu .has-children:active {
-        cursor: pointer; }
-        .site-navbar .site-navigation .site-menu .has-children:hover > .dropdown, .site-navbar .site-navigation .site-menu .has-children:focus > .dropdown, .site-navbar .site-navigation .site-menu .has-children:active > .dropdown {
-          -webkit-transition-delay: 0s;
-          -o-transition-delay: 0s;
-          transition-delay: 0s;
-          margin-top: 0px;
-          visibility: visible;
-          opacity: 1; }
+    .site-navbar .site-navigation .site-menu li a:hover {
+          color: #005a9f !important;}
+      /*.site-navbar .site-navigation .site-menu > li:last-child {*/
+      /*  padding-right: 0; }*/
+      /*  .site-navbar .site-navigation .site-menu > li:last-child > a {*/
+      /*    padding-right: 0; }*/
+    /*.site-navbar .site-navigation .site-menu .has-children {*/
+    /*  position: relative; }*/
+    /*  .site-navbar .site-navigation .site-menu .has-children > a {*/
+    /*    position: relative;*/
+    /*    padding-right: 20px; }*/
+    /*    .site-navbar .site-navigation .site-menu .has-children > a:before {*/
+    /*      position: absolute;*/
+    /*      content: "\e313";*/
+    /*      font-size: 16px;*/
+    /*      top: 50%;*/
+    /*      right: 0;*/
+    /*      -webkit-transform: translateY(-50%);*/
+    /*      -ms-transform: translateY(-50%);*/
+    /*      transform: translateY(-50%);*/
+    /*      font-family: 'icomoon'; }*/
+    /*  .site-navbar .site-navigation .site-menu .has-children .dropdown {*/
+    /*    visibility: hidden;*/
+    /*    opacity: 0;*/
+    /*    top: 100%;*/
+    /*    border-radius: 7px;*/
+    /*    position: absolute;*/
+    /*    text-align: left;*/
+    /*    -webkit-box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.25);*/
+    /*    box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.25);*/
+    /*    padding: 10px 0;*/
+    /*    margin-top: 20px;*/
+    /*    margin-left: 0px;*/
+    /*    background: #000;*/
+    /*    -webkit-transition: 0.2s 0s;*/
+    /*    -o-transition: 0.2s 0s;*/
+    /*    transition: 0.2s 0s; }*/
+    /*    .site-navbar .site-navigation .site-menu .has-children .dropdown.arrow-top {*/
+    /*      position: absolute; }*/
+    /*      .site-navbar .site-navigation .site-menu .has-children .dropdown.arrow-top:before {*/
+    /*        bottom: 100%;*/
+    /*        left: 15%;*/
+    /*        border: solid transparent;*/
+    /*        content: " ";*/
+    /*        height: 0;*/
+    /*        width: 0;*/
+    /*        position: absolute;*/
+    /*        pointer-events: none; }*/
+    /*      .site-navbar .site-navigation .site-menu .has-children .dropdown.arrow-top:before {*/
+    /*        border-color: rgba(136, 183, 213, 0);*/
+    /*        border-bottom-color: #000;*/
+    /*        border-width: 7px;*/
+    /*        margin-left: -7px; }*/
+    /*    .site-navbar .site-navigation .site-menu .has-children .dropdown a {*/
+    /*      text-transform: none;*/
+    /*      letter-spacing: normal;*/
+    /*      -webkit-transition: 0s all;*/
+    /*      -o-transition: 0s all;*/
+    /*      transition: 0s all;*/
+    /*      color: #343a40;*/
+    /*      color: #fff; }*/
+    /*    .site-navbar .site-navigation .site-menu .has-children .dropdown .active > a {*/
+    /*      color: #005a9f !important; }*/
+    /*    .site-navbar .site-navigation .site-menu .has-children .dropdown > li {*/
+    /*      list-style: none;*/
+    /*      padding: 0;*/
+    /*      margin: 0;*/
+    /*      min-width: 200px; }*/
+    /*      .site-navbar .site-navigation .site-menu .has-children .dropdown > li > a {*/
+    /*        padding: 5px 20px;*/
+    /*        display: block; }*/
+    /*        .site-navbar .site-navigation .site-menu .has-children .dropdown > li > a:hover {*/
+    /*          color: #005a9f; }*/
+    /*      .site-navbar .site-navigation .site-menu .has-children .dropdown > li.has-children > a:before {*/
+    /*        content: "\e315";*/
+    /*        right: 20px; }*/
+    /*      .site-navbar .site-navigation .site-menu .has-children .dropdown > li.has-children > .dropdown, .site-navbar .site-navigation .site-menu .has-children .dropdown > li.has-children > ul {*/
+    /*        left: 100%;*/
+    /*        top: 0; }*/
+    /*      .site-navbar .site-navigation .site-menu .has-children .dropdown > li.has-children:hover > a, .site-navbar .site-navigation .site-menu .has-children .dropdown > li.has-children:active > a, .site-navbar .site-navigation .site-menu .has-children .dropdown > li.has-children:focus > a {*/
+    /*        color: #005a9f; }*/
+    /*  .site-navbar .site-navigation .site-menu .has-children a {*/
+    /*    text-transform: uppercase; }*/
+    /*  .site-navbar .site-navigation .site-menu .has-children:hover > a, .site-navbar .site-navigation .site-menu .has-children:focus > a, .site-navbar .site-navigation .site-menu .has-children:active > a {*/
+    /*    color: #000; }*/
+    /*  .site-navbar .site-navigation .site-menu .has-children:hover, .site-navbar .site-navigation .site-menu .has-children:focus, .site-navbar .site-navigation .site-menu .has-children:active {*/
+    /*    cursor: pointer; }*/
+    /*    .site-navbar .site-navigation .site-menu .has-children:hover > .dropdown, .site-navbar .site-navigation .site-menu .has-children:focus > .dropdown, .site-navbar .site-navigation .site-menu .has-children:active > .dropdown {*/
+    /*      -webkit-transition-delay: 0s;*/
+    /*      -o-transition-delay: 0s;*/
+    /*      transition-delay: 0s;*/
+    /*      margin-top: 0px;*/
+    /*      visibility: visible;*/
+    /*      opacity: 1; }*/
 
 .site-mobile-menu {
   width: 300px;
@@ -1861,7 +1861,5 @@ table {
     width: 120px;
   }
 }
-a:hover {
-  color: red;
-}
+
 
