--- a/css/style.css
+++ b/css/style.css
@@ -1775,6 +1775,9 @@ table {
 }
 
 .contact_link {
-    font-size: 14px; text-decoration: none;
+  /*color: black !important;*/
+  text-decoration: underline;
+
+  font-size: 14px;
 }
 
