--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ a:hover {
 }
 
 .btn.btn-primary:hover {
-    border-color: #005a9f;
+    background-color: #239b3a !important;
 }
 
 .site-wrap {
@@ -118,7 +118,7 @@ a:hover {
 }
 
 .form-control:active, .form-control:focus {
-    border-color: #005a9f;
+    border-color: #239b3a;
 }
 
 .form-control:hover, .form-control:active, .form-control:focus {
@@ -153,7 +153,7 @@ a:hover {
     position: absolute;
     width: 40px;
     height: 2px;
-    background: #005a9f;
+    background: #239b3a;
 }
 
 .site-section-heading.text-center:before {
@@ -166,7 +166,7 @@ a:hover {
     position: absolute;
     width: 40px;
     height: 2px;
-    background: #005a9f;
+    background: #239b3a;
 }
 
 .site-footer {
@@ -320,7 +320,7 @@ a:hover {
 }
 
 .site-navbar .site-navigation .site-menu .active > a {
-    color: #005a9f !important;
+    color: #239b3a !important;
 }
 
 .site-navbar .site-navigation .site-menu a {
@@ -344,7 +344,7 @@ a:hover {
 }
 
 .site-navbar .site-navigation .site-menu li a:hover {
-    color: #005a9f !important;
+    color: #239b3a !important;
 }
 
 @media (max-width: 768px) {
@@ -444,7 +444,7 @@ a:hover {
 }
 
 .site-mobile-menu .site-nav-wrap a:hover {
-    color: #005a9f;
+    color: #239b3a;
 }
 
 .site-mobile-menu .site-nav-wrap li {
@@ -453,7 +453,7 @@ a:hover {
 }
 
 .site-mobile-menu .site-nav-wrap li.active > a {
-    color: #005a9f;
+    color: #239b3a;
 }
 
 .site-mobile-menu .site-nav-wrap .arrow-collapse {
@@ -775,7 +775,7 @@ a:hover {
     display: block;
     border-radius: 50%;
     opacity: 1;
-    color: #005a9f !important;
+    color: #239b3a !important;
 }
 
 .site-block-half.site-block-video .image .play-button:hover {
@@ -899,7 +899,7 @@ a:hover {
 .block-13 .owl-nav .owl-prev:hover, .block-13 .owl-nav .owl-next:hover, .block-14 .owl-nav .owl-prev:hover, .block-14 .owl-nav .owl-next:hover, .block-15 .owl-nav .owl-prev:hover, .block-15 .owl-nav .owl-next:hover {
     -webkit-box-shadow: none !important;
     box-shadow: none !important;
-    background: #005a9f;
+    background: #239b3a;
     color: #fff;
 }
 
@@ -935,7 +935,7 @@ a:hover {
 }
 
 .block-13 .owl-dots .owl-dot.active > span, .block-14 .owl-dots .owl-dot.active > span, .block-15 .owl-dots .owl-dot.active > span {
-    background: #005a9f;
+    background: #239b3a;
 }
 
 .play-button {
@@ -1104,7 +1104,7 @@ a:hover {
     width: 80px;
     height: 4px;
     margin-top: -4px;
-    background: #005a9f;
+    background: #239b3a;
     top: 0;
 }
 
@@ -1132,7 +1132,7 @@ a:hover {
     display: block;
     border-radius: 50%;
     opacity: 1;
-    color: #005a9f !important;
+    color: #239b3a !important;
 }
 
 .block-16 figure .play-button:hover {
@@ -1186,7 +1186,7 @@ a:hover {
 }
 
 .block-25 ul li a .meta {
-    color: #005a9f;
+    color: #239b3a;
 }
 
 .block-25 ul li a:hover img {
@@ -1225,7 +1225,7 @@ a:hover {
     position: absolute;
     width: 30px;
     height: 30px;
-    background: #005a9f;
+    background: #239b3a;
     border-radius: 50%;
     color: #fff;
 }
@@ -1272,7 +1272,7 @@ a:hover {
 }
 
 .site-block-27 ul li.active a, .site-block-27 ul li.active span {
-    background: #005a9f;
+    background: #239b3a;
     color: #fff;
     border: 1px solid transparent;
 }
@@ -1343,7 +1343,7 @@ a:hover {
 
 .site-block-check li:before {
     position: absolute;
-    color: #005a9f;
+    color: #239b3a;
     left: 0;
     top: -.3rem;
     font-family: 'icomoon';
@@ -1362,7 +1362,7 @@ a:hover {
 }
 
 .half-sm:hover .text, .half-sm:focus .text {
-    background: #005a9f !important;
+    background: #239b3a !important;
     color: #fff;
 }
 
@@ -1407,7 +1407,7 @@ a:hover {
     transition: .3s all ease;
     top: 0;
     left: 0;
-    background-color: #005a9f;
+    background-color: #239b3a;
 }
 
 .block-37 .image .block-37-overlay {
@@ -1462,7 +1462,7 @@ a:hover {
     width: 50px;
     height: 2px;
     bottom: 0;
-    background: #005a9f;
+    background: #239b3a;
     left: 0;
 }
 
@@ -1675,9 +1675,9 @@ a:hover {
     -webkit-transition: .3s all ease;
     -o-transition: .3s all ease;
     transition: .3s all ease;
-    background: #005a9f;
+    background: #239b3a;
     color: #fff;
-    border: 1px solid #005a9f;
+    border: 1px solid #239b3a;
 }
 
 .unit-8 .accordion-item .heading > a[aria-expanded="false"]:before {
@@ -1786,7 +1786,7 @@ a:hover {
 }
 
 .btn-bg-primary:hover {
-    color: #005a9f;
+    color: #239b3a;
     background: #fff !important;
 }
 
@@ -1810,7 +1810,7 @@ a:hover {
 }
 
 .custom-pagination a:hover {
-    background: #005a9f;
+    background: #239b3a;
     color: #fff;
 }
 
@@ -1854,7 +1854,7 @@ a:hover {
 .counter .number {
     font-family: "Oswald", arial, sans-serif;
     font-size: 4rem;
-    color: #005a9f;
+    color: #239b3a;
 }
 
 .footer-subscribe .form-control {
@@ -1888,7 +1888,7 @@ a:hover {
 }
 
 .footer-subscribe .form-control:focus {
-    border-color: #005a9f;
+    border-color: #239b3a;
 }
 
 .footer-subscribe .btn {
@@ -2047,7 +2047,7 @@ a:hover {
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    background: #005a9f;
+    background: #239b3a;
     display: inline-block;
     position: relative;
 }
@@ -2355,4 +2355,451 @@ table {
 
     font-size: 14px;
 }
+
+
+.entry-item {
+    margin-bottom: 25px;
+    padding-bottom: 25px;
+    border-bottom: 1px dotted #e5e5e5;
+}
+.entry-item .typo .typo-img {
+    margin-right: 25px;
+}
+.entry-item .typo .typo-img-right {
+    margin-right: 0;
+    margin-left: 25px;
+}
+.entry-img {
+    margin-bottom: 10px;
+}
+.entry-img img {
+    display: block;
+}
+.entry-title {
+    margin-bottom: 15px;
+}
+.entry-title h2 {
+    font-size: 16px;
+    line-height: 1.4;
+}
+.entry-title a {
+}
+.entry-title a:hover {
+    text-decoration: none;
+}
+.entry-meta {
+    font-size: 12px;
+    margin-bottom: 10px;
+    color: #999;
+}
+.entry-meta em {
+    margin: 0 8px;
+}
+.entry-meta strong {
+    font-weight: normal;
+}
+.entry-meta a {
+    color: #999;
+}
+.entry-meta a:hover {
+    color: #614c3f;
+    text-decoration: none;
+}
+.entry-summary {
+    color: #808080;
+    font-size: 13px;
+    margin-bottom: -5px;
+}
+.entry-summary p {
+    line-height: 1.6;
+}
+.entry-detail {
+    padding-right: 10px;
+    font-size: 13px;
+    color: #998b81;
+    background: url(../images/arrow-r.gif) no-repeat right center;
+}
+.entry-detail:hover {
+    text-decoration: none;
+    color: #614c3f;
+}
+.entry-item .typo-img .entry-img {
+    margin-bottom: 0;
+}
+.entry-item .typo-text .entry-title {
+    margin-top: -2px;
+    _margin-top: -1px;
+}
+.entry-set .typo .typo-img {
+    margin-right: 15px;
+}
+.entry-set .typo .typo-img-right {
+    margin-left: 15px;
+    margin-right: 0;
+}
+.entry-set .entry-title {
+    margin-bottom: 10px;
+}
+.entry-set .entry-title h2 {
+    font-size: 15px;
+}
+.entry-set .entry-summary, .entry-set .entry-detail {
+    font-size: 12px;
+}
+.entry-set .entry-item .typo-text .entry-title {
+    margin-top: -2px;
+    _margin-top: -1px;
+}
+.entry-list-time-hl .entry-item {
+    position: relative;
+    padding-left: 100px;
+    border-bottom: 1px dotted #ccc;
+    min-height: 80px;
+    height: auto !important;
+    _height: 80px;
+}
+.entry-list-time-hl .time {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 75px;
+    background-color: #f2f2f2;
+    text-align: center;
+    font-family: Arial;
+}
+.module-full-screen-hl .entry-list-time-hl .time {
+    background-color: #787878;
+}
+.entry-list-time-hl .time-day {
+    display: block;
+    line-height: 50px;
+    border-bottom: 1px solid #fff;
+    color: #666;
+    font-size: 30px;
+}
+.entry-list-time-hl .time-date {
+    display: block;
+    color: #999;
+    line-height: 22px;
+    font-size: 12px;
+}
+.entry-set-time-hl .entry-item {
+    padding-left: 80px;
+    min-height: 70px;
+    height: auto !important;
+    _height: 70px;
+    padding-bottom: 15px;
+    margin-bottom: 15px;
+}
+.entry-set-time-hl .entry-title {
+    margin-bottom: 10px;
+}
+.entry-set-time-hl .entry-title h2 {
+    font-size: 14px; /*font-weight:normal; */
+}
+.entry-set-time-hl .entry-summary {
+    color: #808080;
+    font-size: 12px;
+}
+.entry-set-time-hl .time {
+    width: 60px;
+}
+.entry-set-time-hl .time-day {
+    font-size: 25px;
+    line-height: 40px;
+}
+.entry-set-time-hl .time-date {
+    font-size: 11px;
+}
+.entry-list-time-hl-col .entry-item {
+    border-bottom: none;
+}
+.entry-thumbnail-list .entry-item {
+    border-bottom: none;
+    padding-bottom: 9px;
+    margin-bottom: 9px;
+}
+.entry-thumbnail-list .entry-title h2 {
+    font-weight: normal;
+    font-size: 13px;
+}
+.entry-thumbnail-list .price strong {
+    font-weight: normal;
+}
+
+
+.module-full-screen > .module-inner {
+    padding: 40px 0;
+}
+.module-full-screen > .module-inner .page-width {
+}
+.module-full-screen-title {
+    margin-bottom: 40px;
+    text-align: center;
+}
+.module-full-screen-title > h2 {
+    line-height: normal;
+    font-weight: normal;
+    color: #131313;
+    font-size: 20px;
+    font-size: 2rem;
+    background: url(../images/module-title-bg.png) no-repeat center top;
+    padding-top: 17px;
+}
+.module-full-screen-title > .module-title-content > h3 {
+    display: inline-block;
+    *display:inline;
+    *zoom:1;
+    margin: 0 20px;
+    line-height: normal;
+    font-weight: normal;
+    color: #616161;
+    font-size: 22px;
+    font-size: 2.2rem;
+}
+.module-full-screen-title > .module-title-content > i {
+    display: inline-block;
+    *display:inline;
+    *zoom:1;
+    display: none;
+    position: relative;
+    top: -5px;
+    width: 180px;
+    height: 1px;
+    overflow: hidden;
+    background-color: #d9d9d9;
+}
+.module-full-screen-more {
+    float: none;
+    clear: both;
+    margin-top: 30px;
+    text-align: center;
+}
+.module-full-screen-more a {
+    display: inline-block;
+    *display:inline;
+    *zoom:1;
+    line-height: 34px;
+    padding: 0 35px;
+    border: 1px solid #CCCCCC;
+    color: #666;
+    transition: all 0.5s ease 0s;
+    border-radius: 10px;
+}
+.module-full-screen-more a:hover, .module-full-screen-more a:active {
+    background-color: #614c3f;
+    border-color: #614c3f;
+    color: #fff;
+    text-decoration: none;
+}
+.module-divider-full {
+    margin: 40px 0 -35px;
+    height: 14px;
+    overflow: hidden;
+    background: url(../images/module-divider-full.png) no-repeat center;
+}
+.module-full-screen-gray {
+    background-color: #f9f9f9;
+}
+.module-full-screen-hl {
+    background-color: #73513c;
+    color: #fff !important;
+}
+.module-full-screen-hl a {
+    color: #fff;
+}
+.module-full-screen-hl .module-full-screen-title > h2 {
+    color: #fff;
+    background-image: url(../images/module-title-bg-hl.png)
+}
+.module-full-screen-hl .module-full-screen-title > .module-title-content > h3 {
+    color: #e5e5e5;
+}
+.module-full-screen-hl .module-full-screen-title > .module-title-content > i {
+    background-color: #e5e5e5;
+}
+.module-full-screen-hl .page-width > .module-full-screen-content {
+    color: #fff !important;
+}
+.module-full-screen-hl .page-width > .module-full-screen-content p {
+    color: #fff !important;
+}
+.module-full-screen-hl .page-width > .module-full-screen-content a {
+    color: #fff !important;
+}
+.module-full-screen-hl .page-width > .module-full-screen-content a:hover {
+    color: #fff !important;
+    text-decoration: underline;
+}
+.module-full-screen-hl .module-full-screen-more a {
+    color: #fff;
+    border-color: #fff;
+}
+.module-full-screen-hl .module-full-screen-more a:hover {
+    background-color: #fff;
+    border-color: #fff;
+    color: #333;
+    text-decoration: none;
+}
+.module-full-screen-hl .module-divider-full {
+    background: url(../images/module-divider-full-white.png) no-repeat center;
+}
+.module-full-screen-bg-img {
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+.module-full-screen-padding-bottom {
+    padding-bottom: 70px;
+}
+.module-full-screen-more-fixed > .module-inner .page-width {
+    position: relative;
+}
+.module-full-screen-more-fixed .module-full-screen-more {
+    position: absolute;
+    left: 50%;
+    z-index: 1000;
+    margin-left: -48px;
+    margin-top: 20px;
+    -webkit-animation: upAndDown 2s infinite;
+    animation: upAndDown 2s infinite;
+}
+.module-full-screen-more-fixed .module-full-screen-more a {
+    background-color: transparent;
+    padding: 0;
+    border: none;
+    color: #614c3f;
+    font-size: 16px;
+    width: 97px;
+    height: 97px;
+    line-height: 97px;
+    background: url(../images/module-full-screen-more-fixed.png) no-repeat 0 0;
+}
+.module-full-screen-more-fixed .module-full-screen-more a:hover {
+    background-color: transparent;
+    background-position: 0 -97px;
+    color: #fff;
+}
+.module-full-screen-gray-expand > .module-inner {
+}
+.module-full-screen-gray-expand-box-t, .module-full-screen-gray-expand-box-b {
+    position: relative;
+    height: 10px;
+}
+.module-full-screen-gray-expand-box-t .module-full-screen-gray-expand-bg, .module-full-screen-gray-expand-box-b .module-full-screen-gray-expand-bg {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 20px;
+}
+.module-full-screen-gray-expand-box-t .module-full-screen-gray-expand-bg {
+    top: -10px;
+}
+.module-full-screen-gray-expand-box-t .module-full-screen-gray-expand-bg {
+    background: url(../images/module-full-screen-bg-wave-gray-t.png) no-repeat bottom center;
+}
+.module-full-screen-gray-expand-box-b .module-full-screen-gray-expand-bg {
+    background: url(../images/module-full-screen-bg-wave-gray-b.png) no-repeat bottom center;
+}
+.module-full-screen {
+    margin: 0 -10px;
+    padding: 0 10px;
+}
+.module-full-screen > .module-inner {
+    padding: 30px 0;
+}
+.module-full-screen-more-fixed > .module-inner {
+    padding: 30px 0 50px;
+}
+.module-full-screen-more-fixed .module-full-screen-more {
+    margin-top: 15px;
+    margin-left: -40px;
+}
+.module-full-screen-more-fixed .module-full-screen-more a {
+    width: 80px;
+    height: 80px;
+    line-height: 80px;
+    font-size: 14px;
+    background-size: cover;
+}
+.module-full-screen-more-fixed .module-full-screen-more a:hover {
+    background-position: 0 -80px;
+}
+
+.module-full-screen-title {
+    margin-bottom: 20px;
+}
+.module-full-screen-title > .module-title-content > h2 {
+    margin: 0 15px;
+    font-size: 20px;
+    font-weight: bold;
+}
+.module-full-screen-title > h3 {
+    display: none;
+}
+.module-full-screen-title > .module-title-content > i {
+    width: 80px;
+}
+.module-full-screen-more a {
+    line-height: 34px;
+}
+
+/* 容器 */
+.module-full-screen-title > .module-title-content > i {
+    width: 40px;
+}
+
+.module-full-screen-hl .entry-list-time-hl .time {
+    background-color: #787878;
+}
+
+/* 文章 */
+.headlines-list-2col .headlines-content {
+    width: 100%;
+    float: none;
+    display: block;
+    margin-right: 0;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+}
+
+.headlines-list-2col .headlines-content {
+    width: 48%;
+    float: left;
+    display: inline;
+    margin-right: 5%;
+}
+.headlines-list-2col .headlines-content p {
+    margin-bottom: 15px;
+}
+.headlines-list-2col .headlines-content p a {
+    display: block;
+}
+.headlines-list-2col .headlines-content p img {
+    display: block;
+    width: 100%;
+}
+.headlines-list-2col .headlines-content h2 {
+    font-size: 16px;
+    line-height: normal;
+    margin-bottom: 8px;
+}
+.headlines-list-2col .headlines-content-summary {
+    font-size: 13px;
+    line-height: 1.5;
+    color: #666;
+}
+.headlines-list-2col .headlines-others {
+    overflow: hidden;
+    *zoom:1;
+}
+.headlines-list-2col .headlines-others .entry-set-time-hl .entry-item {
+    border-bottom: none;
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+}
+.headlines-list-2col .headlines-others .entry-set-time-hl .entry-summary {
+    margin-bottom: -8px;
+}
+
 
