--- a/css/bootstrap/bootstrap-reboot.css
+++ b/css/bootstrap/bootstrap-reboot.css
@@ -104,7 +104,7 @@ sup {
   top: -.5em; }
 
 a {
-  color: #005a9f;
+  color: #239b3a;
   text-decoration: none;
   background-color: transparent; }
   a:hover {
