--- a/scss/bootstrap/_variables.scss
+++ b/scss/bootstrap/_variables.scss
@@ -41,7 +41,7 @@ $pink:    #e83e8c !default;
 $red:     #dc3545 !default;
 $orange:  #fd7e14 !default;
 $yellow:  #ffc107 !default;
-$green:   #005a9f !default;
+$green:   #239b3a !default;
 $teal:    #20c997 !default;
 $cyan:    #17a2b8 !default;
 
