add(index):cn & en

--- a/css/style.css
+++ b/css/style.css
@@ -315,6 +315,10 @@ a:hover {
     color: #000;
 }
 
+.site-navbar .container{
+    display: flex;
+    justify-content: flex-end;
+}
 .site-navbar .site-navigation .site-menu {
     margin-bottom: 0;
 }
