adjust(index-knowledge):fontsize

--- a/css/style.css
+++ b/css/style.css
@@ -2157,7 +2157,7 @@ footer {
 }
 
 footer p, a {
-    font-size: 12px;
+    font-size: 1.2rem;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -2423,6 +2423,11 @@ table {
 }
 .entry-title a:hover {
     text-decoration: none;
+    color: #000 !important;
+}
+.headlines-list-2col .headlines-content h2 a:hover{
+    color: #000 !important;
+
 }
 .entry-meta {
     font-size: 12px;
@@ -2536,7 +2541,7 @@ table {
 }
 .entry-set-time-hl .entry-summary {
     color: #808080;
-    font-size: 12px;
+    /* font-size: 12px; */
 }
 .entry-set-time-hl .time {
     width: 60px;
